<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.loginemail.EmailLoginActivity">

    <TextView
        android:id="@+id/emailLogin_tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/emailLogin_main_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/emailLogin_btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/loginemail_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailLogin_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:ems="20"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/email_login_et_custom"
        android:hint="@string/emailLogin_et_email_hint"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogin_tv_main" />

    <EditText
        android:id="@+id/emailLogin_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/email_login_et_custom"
        android:hint="@string/emailLogin_et_password_hint"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:ems="20"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogin_et_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emailLogin_btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/loginemail_btn_custom"
        android:text="@string/emailLogin_btn_login_text"
        android:enabled="false"
        android:textColor="@color/email_login_btn_textColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emailLogin_et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emailLogin_btn_password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00FF0000"
        android:text="@string/emailLogin_btn_password_text"
        android:textColor="@color/email_login_passwordReset_textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogin_btn_complete" />

</androidx.constraintlayout.widget.ConstraintLayout>