<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/order_layout_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pay_order_backgroundColor"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/order_storeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/pay_order_tv_storeTitle"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_order_tv_deliveryDefaultText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/pay_order_tv_deliveryPriceText"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_layout_Title">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/order_cv_goodsImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/pay_rv_image" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/order_goodsTitle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pay_order_tv_goodsTitle"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/order_cv_goodsImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/order_goodsOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pay_order_tv_goodsOption"
                app:layout_constraintStart_toStartOf="@id/order_goodsTitle"
                app:layout_constraintTop_toBottomOf="@id/order_goodsTitle" />

            <TextView
                android:id="@+id/order_goodsPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_order_tv_goodsPrice"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/order_goodsOption"
                app:layout_constraintTop_toBottomOf="@id/order_goodsOption" />

            <TextView
                android:id="@+id/order_goodsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="1개"
                app:layout_constraintBottom_toBottomOf="@id/order_goodsPrice"
                app:layout_constraintStart_toEndOf="@id/order_goodsPrice" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>